    - Reduced number of spores from algae
    - Liquids in barrels are shown now in fluids group
  Bugfixes:
    - Fixed zinc casting recipes produced more zinc oxide and zinc sulfate than they produce
    - Fixed indium casting recipes produced more indium sulfate than they produce
    - Fixed molten recipes from crushed iron ore and crushed copper ore
    - Fixed technology requirements for bio pesticide
    - Fixed name from train boige to train bogie (you will have to select again the recipe of the assembling machine)
    - Fixed order of icons of first tier of science packs in lab reflectig better the order of progression
    - Fixed that fast inserter could carry higher stack size than bulk inserter
    - Fixed chromium cobalt recipe
    - Fixed biusart lab graphics (before it was low res)
    - Fixed changelog visibility in game
    - Fixed material science pack 2 not being required as input cost fore some sciences that came after it
    - Fixed ingredients for lithium processing tech
    - Fixed integrated circuit tech not requiring polyvinl fluoride tech
---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 2025-05-16
  Features:
    - Added coast water for having big algae farms. Can only be placed on deepwater.
    - Added artificial gleba tile
    - Added black and white reinforced plate tiles
  Changes:
    - Fungi renamed to honeycomb fungus
    - Wheat is now accquired from wheat plants on nauvis growing on dry and grass tiles on nauvis terrain
    - Honeycomb fungus is no accquired from honeycomb fungus plant growing on gleba terrain
    - Wheat and honeycomb fungus can be cultivated just like othar plants
    - Recipe changes for accquiring spores
    - Updated some agriculture related icons
  Bugfixes:
    - Fixed enriching iron recipe
    - Fixed some en locale
    - Fixed magnesium not being able to be mined until reaching sulfur processing