@@ -115,6 +115,11 @@ data.raw.tool["agricultural-science-pack"].spoil_result = nil
 -- lava tiles
 data.raw.tile["lava"].fluid = "sp-ultramafic-lava"
 
+data.raw.lab["biolab"].icons_positioning = {
+  {inventory_index = defines.inventory.lab_modules, shift = {0, 1.6}},
+  {inventory_index = defines.inventory.lab_input, shift = {0, -0.9}, max_icons_per_row = 10, separation_multiplier = 1/1.1}
+}
+
 -- tile conditions
 table.insert(data.raw.item["overgrowth-yumako-soil"].place_as_tile.tile_condition, "sp-artificial-gleba-soil")
 table.insert(data.raw.item["overgrowth-yumako-soil"].place_as_tile.tile_condition, "grass-1")
