@@ -13,15 +13,17 @@ Date: 2025-05-23
     - Fixed zinc casting recipes produced more zinc oxide and zinc sulfate than they produce
     - Fixed indium casting recipes produced more indium sulfate than they produce
     - Fixed molten recipes from crushed iron ore and crushed copper ore
-    - Fixed technology requirements for bio pesticide
     - Fixed name from train boige to train bogie (you will have to select again the recipe of the assembling machine)
-    - Fixed order of icons of first tier of science packs in lab reflectig better the order of progression
     - Fixed that fast inserter could carry higher stack size than bulk inserter
     - Fixed chromium cobalt recipe
     - Fixed biusart lab graphics (before it was low res)
     - Fixed changelog visibility in game
+    - Fixed order of icons of first tier of science packs in lab reflectig better the order of progression
+    - Fixed that science packs on labs could be covered by modules in alt mode
+    - Fixed technology requirements for bio pesticide
     - Fixed material science pack 2 not being required as input cost fore some sciences that came after it
     - Fixed ingredients for lithium processing tech
+    - Fixed ingredients for logistics 3 tech
     - Fixed integrated circuit tech not requiring polyvinl fluoride tech
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.15
